[package]
name = "rn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.1"
config = "0.13.4"
fern = "0.6.2"
figment = "0.10.12"
log = "0.4.20"
serde = "1.0.193"
serde_json = "1.0.108"
simple_logger = "4.2.0"
