[package]
name = "rn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
# my crates


[dependencies]
playground = { path = "./playground" }
cargo-watch = "8.4.1"
regex = "1.10.3"
serde = "1.0.193"
serde_json = "1.0.108"
rand = "0.8.5"
